--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="js/config.js"></script>
     <script src="js/helpers.js"></script>
     <script src="js/worksheets/addition.js"></script>
+    <script src="js/worksheets/subtraction.js"></script>
     <script src="js/worksheets/colors.js"></script>
     <script src="js/worksheets/counting.js"></script>
     <script src="js/worksheets/matching.js"></script>
