--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="js/worksheets/addition.js"></script>
     <script src="js/worksheets/subtraction.js"></script>
     <script src="js/worksheets/colors.js"></script>
+    <script src="js/worksheets/colorsl2.js"></script>
     <script src="js/worksheets/counting.js"></script>
     <script src="js/worksheets/matching.js"></script>
     <script src="js/worksheets/moreless.js"></script>
