--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <script src="js/worksheets/biggersmaller.js"></script>
     <script src="js/worksheets/whatnext.js"></script>
     <script src="js/worksheets/connectdots.js"></script>
+    <script src="js/worksheets/urdutrace.js"></script>
+    <script src="js/worksheets/urdureading.js"></script>
+    <script src="js/worksheets/urdu2letter.js"></script>
+    <script src="js/worksheets/urduwhatnext.js"></script>
     <script src="js/worksheets/twoletterwords.js"></script>
     <script src="js/worksheets/threeletterwords.js"></script>
     <script src="js/worksheets/traceabc.js"></script>
