--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="js/worksheets/urdureading.js"></script>
     <script src="js/worksheets/urdu2letter.js"></script>
     <script src="js/worksheets/urduwhatnext.js"></script>
+    <script src="js/worksheets/urduvideos.js"></script>
     <script src="js/worksheets/twoletterwords.js"></script>
     <script src="js/worksheets/threeletterwords.js"></script>
     <script src="js/worksheets/traceabc.js"></script>
