--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="js/worksheets/urduwhatnext.js"></script>
     <script src="js/worksheets/urduvideos.js"></script>
     <script src="js/worksheets/arabicqaida.js"></script>
+    <script src="js/worksheets/urduqaida.js"></script>
     <script src="js/worksheets/twoletterwords.js"></script>
     <script src="js/worksheets/threeletterwords.js"></script>
     <script src="js/worksheets/traceabc.js"></script>
